Add SeforimMagicIndexer as a new submodule
Introduced a new submodule, SeforimMagicIndexer, to the project with its repository URL configured in `.gitmodules`. This will enhance functionality by incorporating the indexing capabilities provided by SeforimMagicIndexer.

--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "SeforimAcronymizer"]
 	path = SeforimAcronymizer
 	url = https://github.com/kdroidFilter/SeforimAcronymizer.git
+[submodule "SeforimMagicIndexer"]
+	path = SeforimMagicIndexer
+	url = https://github.com/kdroidFilter/SeforimMagicIndexer
